error.out
  File "code.py", line 3
    print()ss
            ^
SyntaxError: invalid syntax
